{
  "version": 4,
  "terraform_version": "0.15.5",
  "serial": 41,
  "lineage": "f2d36b60-e109-e8d1-fd59-90a658cfe5ab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-05c8661f25039d8ea",
            "domain": "vpc",
            "id": "eipalloc-0fb9a4d2ce351c467",
            "instance": "i-0d3ec8cae7c5809da",
            "network_border_group": "us-west-2",
            "network_interface": "eni-07720f1f0c5eb5f4b",
            "private_dns": "ip-10-0-1-50.us-west-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-44-239-55-120.us-west-2.compute.amazonaws.com",
            "public_ip": "44.239.55.120",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.Ubuntu",
            "aws_internet_gateway.gateway",
            "aws_network_interface.Web-NIC",
            "aws_security_group.Allow-web",
            "aws_subnet.test-subnet",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03d5c68bab01f3496",
            "arn": "arn:aws:ec2:us-west-2:566770502489:instance/i-0d3ec8cae7c5809da",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d3ec8cae7c5809da",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Terra",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-07720f1f0c5eb5f4b"
              }
            ],
            "primary_network_interface_id": "eni-07720f1f0c5eb5f4b",
            "private_dns": "ip-10-0-1-50.us-west-2.compute.internal",
            "private_ip": "10.0.1.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cc883a8d20b5f0db",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03297fb63f0948456",
            "tags": {
              "Name": "Web-server"
            },
            "tags_all": {
              "Name": "Web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b29e08940dc85fe6"
            ]
          },
          "dependencies": [
            "aws_network_interface.Web-NIC",
            "aws_security_group.Allow-web",
            "aws_subnet.test-subnet",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ubuntu-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03d5c68bab01f3496",
            "arn": "arn:aws:ec2:us-west-2:566770502489:instance/i-04719834f9300cad8",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04719834f9300cad8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-081e12b55cc46efe8",
            "private_dns": "ip-172-31-20-46.us-west-2.compute.internal",
            "private_ip": "172.31.20.46",
            "public_dns": "ec2-54-188-10-160.us-west-2.compute.amazonaws.com",
            "public_ip": "54.188.10.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-068ad5c44e8f725f6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-b433f2cc",
            "tags": {
              "Name": "Ubuntu-dev"
            },
            "tags_all": {
              "Name": "Ubuntu-dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-84159ed7"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:566770502489:internet-gateway/igw-06382fb30e5f15f4a",
            "id": "igw-06382fb30e5f15f4a",
            "owner_id": "566770502489",
            "vpc_id": "vpc-091b3321d6e112b12"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "Web-NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-07720f1f0c5eb5f4b",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:f6:e2:23:17:55",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0b29e08940dc85fe6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03297fb63f0948456"
          },
          "dependencies": [
            "aws_security_group.Allow-web",
            "aws_subnet.test-subnet",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:566770502489:route-table/rtb-05181f0dc790d9c4c",
            "id": "rtb-05181f0dc790d9c4c",
            "owner_id": "566770502489",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06382fb30e5f15f4a",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06382fb30e5f15f4a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Test-route-table"
            },
            "tags_all": {
              "Name": "Test-route-table"
            },
            "vpc_id": "vpc-091b3321d6e112b12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040a42d0f4f555e85",
            "route_table_id": "rtb-05181f0dc790d9c4c",
            "subnet_id": "subnet-03297fb63f0948456"
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_route_table.test-route-table",
            "aws_subnet.test-subnet",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Allow-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:566770502489:security-group/sg-0b29e08940dc85fe6",
            "description": "Allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b29e08940dc85fe6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow-web",
            "name_prefix": "",
            "owner_id": "566770502489",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow_Web"
            },
            "tags_all": {
              "Name": "Allow_Web"
            },
            "timeouts": null,
            "vpc_id": "vpc-091b3321d6e112b12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:566770502489:subnet/subnet-03297fb63f0948456",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03297fb63f0948456",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "566770502489",
            "tags": {
              "Name": "Test-subnet"
            },
            "tags_all": {
              "Name": "Test-subnet"
            },
            "vpc_id": "vpc-091b3321d6e112b12"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:566770502489:vpc/vpc-091b3321d6e112b12",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06a31217eb33cb21a",
            "default_route_table_id": "rtb-0b482da917a9b632f",
            "default_security_group_id": "sg-0558269cf494e2696",
            "dhcp_options_id": "dopt-d6c5a8ae",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-091b3321d6e112b12",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b482da917a9b632f",
            "owner_id": "566770502489",
            "tags": {
              "Name": "Test"
            },
            "tags_all": {
              "Name": "Test"
            }
          }
        }
      ]
    }
  ]
}